# zillow

./: .gitignore  Dockerfile  README.md  aaaaa.txt  docker-compose.yml  manage.py  requirements.txt
New folder/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
New folder/backend/: Dockerfile  alembic.ini  pyproject.toml
New folder/backend/alembic/: env.py
New folder/backend/app/: config.py  main.py
New folder/backend/app/ai/: categorizer.py  llm_client.py  prompts.py
New folder/backend/app/api/: deps.py
New folder/backend/app/api/v1/: ai.py  auth.py  billing.py  categories.py  dashboard.py  organizations.py  reports.py  router.py  transactions.py
New folder/backend/app/core/: __init__.py  database.py  exceptions.py  middleware.py  permissions.py  security.py
New folder/backend/app/models/: __init__.py  audit.py  automation.py  base.py  billing.py  category.py  invoice.py  organization.py  receipt.py  transaction.py  user.py
New folder/backend/app/repositories/: base.py  category_repo.py  organization_repo.py  transaction_repo.py  user_repo.py
New folder/backend/app/schemas/: ai.py  auth.py  billing.py  category.py  common.py  dashboard.py  invoice.py  organization.py  receipt.py  report.py  transaction.py  user.py
New folder/backend/app/services/: auth_service.py  category_service.py  dashboard_service.py  import_service.py  organization_service.py  report_service.py  transaction_service.py  user_service.py
New folder/backend/app/workers/: celery_app.py
New folder/backend/scripts/: seed_categories.py
api/: __init__.py  admin.py  exceptions.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
core/: __init__.py  proxy_manager.py  (+2 more)
(+57 files in other folders)
