[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerai-backend"
version = "0.1.0"
description = "LedgerAI — AI-powered bookkeeping SaaS backend"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "LedgerAI Team"},
]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",

    # Background tasks & caching
    "celery>=5.4.0",
    "redis>=5.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Data processing & import
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",

    # PDF generation
    "reportlab>=4.2.0",

    # Utilities
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
